--- a/decode.html
+++ b/decode.html
@@ -13,6 +13,7 @@
         <h1>JWT Decoder</h1>
     </header>
     <div id="output"></div>
+    <script src="content.js"></script>
     <script src="decode.js"></script>
   </body>
 </html> 
