--- a/decode.html
+++ b/decode.html
@@ -11,6 +11,9 @@
     <header>
         <img src="icon.svg" alt="JWT Decoder" class="icon"/>
         <h1>JWT Decoder</h1>
+        <button id="collapseAll" class="btn" title="Collapse all segments">Collapse all</button>
+        <button id="expandAll" class="btn" title="Expand all segments">Expand all</button>
+        <button id="toggleTheme" class="btn" title="Toggle dark / light mode">Dark mode</button>
     </header>
     <div id="output"></div>
     <script src="content.js"></script>
